# vedic-ai-golden-master

./: .gitignore  ADR_INVENTORY_v1.0.md  API_LAYER_KNOWLEDGE_PACKAGE.md  ARCHITECTURE_DECISION_LOG_v1.0.md  BKL-001_EXECUTION_PACKAGE_v1.0.md  BKL-002_EXECUTION_PACKAGE_v1.0.md  BKL-005_COMPLETION_REPORT.md  BKL-006_CHIEF_ARCHITECT_DECISION_REGISTER.md  BKL-006_CRL1_ARCHIVE_EXECUTION_PACKAGE.md  BKL-006_REPOSITORY_DISCOVERY_REPORT.md  BKL-007_ARCHITECTURAL_REFINEMENT_PLAN_v1.md  BKL-007_ARCHITECTURE_EVIDENCE_REPORT_v1.md  BKL-007_CONSTITUTIONAL_VALIDATION_REVIEW_v1.md  BKL-007_REPOSITORY_DISCOVERY_REPORT_v1.md  BKL-008_DISCOVERY_RECONCILIATION_REPORT_v1.md  CALIBRATION_FRAMEWORK_KNOWLEDGE_PACKAGE.md  DASHA_INTELLIGENCE_KNOWLEDGE_PACKAGE.md  DOSHA_INTELLIGENCE_KNOWLEDGE_PACKAGE.md  ENGINE_KNOWLEDGE_CONSOLIDATION_ANALYSIS_v1.0.md  ENGINE_KNOWLEDGE_OWNERSHIP_MAPPING_v1.0.md  ENGINE_OWNERSHIP_AND_DATA_CONTRACT_REGISTRY_v1.0.md  FORMULA_GOVERNANCE_CONSOLIDATION_ANALYSIS_v1.0.md  FORMULA_LIBRARY_REVIEW_PACK.md  FORMULA_MASTER_INDEX_PLAN.md  FORMULA_OWNERSHIP_MAPPING_v1.0.md  FUNCTIONAL_NATURE_ENGINE_KNOWLEDGE_PACKAGE.md  GM-004_COMPLETION_REPORT_v1.0.md  GOLDEN_MASTER_MANIFEST.md  GOLDEN_MASTER_PROGRESS.md  GOLDEN_MASTER_V1.0_HANDOVER.md  GOVERNANCE_COMPLIANCE_CHECKLIST_v1.0.md  HOUSE_INTELLIGENCE_KNOWLEDGE_PACKAGE.md  LEGACY_MODULE_REMOVAL_EXECUTION_REPORT_v1.md  MANDALI_GENERATOR_KNOWLEDGE_PACKAGE.md  MASTER_PROBABILITY_KNOWLEDGE_PACKAGE.md  PLANET_INTELLIGENCE_KNOWLEDGE_PACKAGE.md  PROGRAM_A_COMPLETION_REPORT.md  PROGRAM_A_FINAL_SUMMARY_REPORT.md  PROJECT_CONTINUITY.md  (+17 more)
(+461 files in other folders)
