[package]
name = "samartha-vedic-ai"
version = "1.0.0"
description = "Deterministic Astrological Analysis Desktop Application"
authors = ["Samartha Vedic AI Team"]
license = "MIT"
repository = "https://github.com/vssomarajupalli-lgtm/vedic-ai-golden-master"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "samartha_vedic_ai"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
